# nexus

./: .env.example  .gitignore  .golangci.yml  .wstr.json  CHANGELOG.md  Makefile  README.md  contact.yaml  docker-compose.sms-sender.yml  go.mod  go.sum  servicectl
.gitea/workflows/: ci.yml  deploy-discord-mcp.yml  deploy-github-mcp.yml  deploy-humanish.yml  deploy-vn.yml  deploy-watcher.yml  docker-deploy.yml  install.yml  propagate-main.yml
.github/: CODEOWNERS
.github/workflows/: ci.yml  deploy-cal-dev.yml  deploy-deadman-dev.yml  deploy-go-http-dev.yml  deploy-hermit-dev.yml  deploy-portal-dev.yml  deploy-secrets-dev.yml  deploy-vn-dev.yml  deploy-web-dev.yml  integration-tests-dev.yml  promote-rc.yml  rc-ci.yml  release.yml
cmd/client-tui/: main.go
cmd/deadman/: Dockerfile  PRIVACY.txt  README.md  entrypoint.sh  main.go
cmd/digest/: main.go
cmd/fool/: main.go
cmd/gatus-config-gen/: Dockerfile  main.go
cmd/realtime/: main.go
cmd/ref/: main.go
cmd/server/: main.go
cmd/servicectl/: docker.go  main.go  registry.go  runner.go
cmd/sms-sender/: main.go
cmd/tui/: main.go
cmd/wstr/: main.go
docker/sms-sender/: Dockerfile
docs/: sms-sender.md  telnyx-setup.md
internal/authmw/: authmw.go  authmw_test.go
internal/collector/: collector.go  collector_test.go  reducers.go
internal/deadman/: db.go  sms.go  test_endpoints.go  ticker.go  (+1 more)
services/rust-grpc/: Cargo.toml  Dockerfile  build.rs
services/rust-grpc/proto/: hermit.proto
services/rust-grpc/src/: auth.rs  bench.rs  db.rs  grpc.rs  main.rs  tcp.rs  tls.rs
static/: index.html
(+355 files in other folders)
