[package]
name = "hermit-server"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "High-performance gRPC + raw TCP server for hermit"

[[bin]]
name = "hermit-server"
path = "src/main.rs"

[dependencies]
tonic = { version = "0.12", features = ["tls"] }
prost = "0.13"
prost-types = "0.13"
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"
rcgen = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
clap = { version = "4", features = ["derive"] }

[build-dependencies]
tonic-build = "0.12"
